[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand='0.8.5 '
chrono='0.4'
sled = "0.34.0"

[[bin]]
name = "main"
path = "src/main.rs"
[[bin]]
name = "hello"
path = "src/hello.rs"
[[bin]]
name = "mythread"
path = "src/mythread.rs"

[[bin]]
name = "sled_test"
path = "src/sled_test.rs"

[[test]]
name = "my_module_test"
path = "src/my_module_test.rs"