[package]
name = "kvs"
version = "0.1.0"
authors = ["jun yao <libevent@yeah.net>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[dependencies]
clap = { version = "3.2.15", features = ["cargo"] }
structopt = "0.3.26"
