[package]
name = "myproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "user-server"
path = "src/user/server.rs"

[[bin]]
name = "user-client"
path = "src/user/client.rs"

[dependencies]
tonic = "0.7.2"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
prost = "0.10"

[build-dependencies]
tonic-build = "0.7.2"